--- a/flex/04-flex-information/index.html
+++ b/flex/04-flex-information/index.html
@@ -1,30 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Information</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="title">Information!</div>
 
-    <img src="./images/barberry.png" alt="barberry">
-    <div class="text">This is a type of plant. We love this one.</div>
+    <!--Create container for all the images and their texts-->
+    <div class="image-text-container-all">
 
-    <img src="./images/chilli.png" alt="chili">
-    <div class="text">This is another type of plant. Isn't it nice?</div>
+      <!--Create image-text-container1-->
+      <div class="image-text-container1">
+        <img src="./images/barberry.png" alt="barberry" />
+        <div class="text">This is a type of plant. We love this one.</div>
+      </div>
 
-    <img src="./images/pepper.png" alt="pepper">
-    <div class="text">We have so many plants. Yay plants.</div>
+      <!--Create image-text-container2-->
+      <div class="image-text-container2">
+        <img src="./images/chilli.png" alt="chili" />
+        <div class="text">This is another type of plant. Isn't it nice?</div>
+      </div>
 
-    <img src="./images/saffron.png" alt="saffron">
-    <div class="text">I'm running out of things to say about plants.</div>
+      <!--Create image-text-container3-->
+      <div class="image-text-container3">
+        <img src="./images/pepper.png" alt="pepper" />
+        <div class="text">We have so many plants. Yay plants.</div>
+      </div>
+
+      <!--Create image-text-container4-->
+      <div class="image-text-container4">
+        <img src="./images/saffron.png" alt="saffron" />
+        <div class="text">I'm running out of things to say about plants.</div>
+      </div>
+      
+    </div>
 
     <!-- disregard this section, it's here to give attribution to the creator of these icons -->
     <div class="footer">
-      <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+      <div>
+        Icons made by
+        <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26"
+          >Icongeek26</a
+        >
+        from
+        <a href="https://www.flaticon.com/" title="Flaticon"
+          >www.flaticon.com</a
+        >
+      </div>
     </div>
   </body>
 </html>
